[gd_scene load_steps=14 format=3 uid="uid://l51a1ncno5m5"]

[ext_resource type="Script" path="res://scenes/ui/player.gd" id="1_6sy4o"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cjonf"]
transparency = 1
blend_mode = 2
albedo_color = Color(1, 1, 1, 0.12549)
refraction_scale = 0.01

[sub_resource type="SphereMesh" id="SphereMesh_mfkkt"]
material = SubResource("StandardMaterial3D_cjonf")
radius = 0.49
height = 0.98

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bsudp"]
albedo_color = Color(1, 0, 0, 1)
metallic = 0.25
metallic_specular = 0.25
backlight_enabled = true
backlight = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_h8tla"]
material = SubResource("StandardMaterial3D_bsudp")
radius = 0.475
height = 0.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uogri"]
transparency = 1
blend_mode = 2
albedo_color = Color(1, 1, 1, 0.12549)

[sub_resource type="TorusMesh" id="TorusMesh_sbd7c"]
material = SubResource("StandardMaterial3D_uogri")
outer_radius = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dtlk4"]
albedo_color = Color(0, 1, 0.784314, 1)
metallic = 0.25
metallic_specular = 0.25
backlight_enabled = true
backlight = Color(0, 1, 1, 1)

[sub_resource type="TorusMesh" id="TorusMesh_gfmu5"]
material = SubResource("StandardMaterial3D_dtlk4")
inner_radius = 0.52
outer_radius = 0.78

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jbw2l"]
transparency = 1
blend_mode = 2
albedo_color = Color(1, 1, 1, 0.12549)

[sub_resource type="TorusMesh" id="TorusMesh_2cfqg"]
material = SubResource("StandardMaterial3D_jbw2l")
inner_radius = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uik35"]
albedo_color = Color(1, 0.654902, 0, 1)
metallic = 0.25
metallic_specular = 0.25
backlight_enabled = true
backlight = Color(1, 0.360784, 0, 1)

[sub_resource type="TorusMesh" id="TorusMesh_jdbg7"]
material = SubResource("StandardMaterial3D_uik35")
inner_radius = 0.82
outer_radius = 0.98

[node name="Player_UI" type="SubViewport"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
render_target_update_mode = 0
script = ExtResource("1_6sy4o")

[node name="health_outer" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_mfkkt")

[node name="health" type="MeshInstance3D" parent="health_outer"]
mesh = SubResource("SphereMesh_h8tla")

[node name="energy_outer" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TorusMesh_sbd7c")

[node name="energy" type="MeshInstance3D" parent="energy_outer"]
mesh = SubResource("TorusMesh_gfmu5")

[node name="experience_outer" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TorusMesh_2cfqg")

[node name="experience" type="MeshInstance3D" parent="experience_outer"]
mesh = SubResource("TorusMesh_jdbg7")
